--- a/style.css
+++ b/style.css
@@ -34,10 +34,7 @@ body {
   color: #8765e6;
 }
 
-input[type="email"],
-input[type="text"],
-input[type="textbox"],
-input[type="number"] {
+input {
   background-color: transparent;
   color: var(--primary-color);
   outline: none;
@@ -52,7 +49,10 @@ input:hover {
   background-color: rgba(113, 67, 241, 0.6);  
 }
 
-input:focus {
+input[type="email"]:focus,
+input[type="text"]:focus,
+input[type="textbox"]:focus,
+input[type="number"]:focus {
   transform: scale(1.03, 1.03);
   background-color: rgba(113, 67, 241, 0.9);  
   border: 3px solid #ffffff;
