--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ input:hover {
 
 input[type="email"]:focus,
 input[type="text"]:focus,
-input[type="textbox"]:focus,
+input[type="password"]:focus,
 input[type="number"]:focus {
   transform: scale(1.03, 1.03);
   background-color: rgba(113, 67, 241, 0.9);  
