--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ input[type="number"]:focus {
   transform: scale(1.03, 1.03);
   background-color: rgba(113, 67, 241, 0.9);  
   border: 3px solid #ffffff;
+  background-color: rgba(113, 67, 241, 0.6);  
 }
 
 input::placeholder {
