--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ body {
   background-color: var(--bg-color);
   color: var(--primary-color);
   font-family: "Inter", sans-serif;
+  -webkit-font-smoothing: antialiased;
+    text-rendering: optimizelegibility;
 }
 
 .title {
