--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ body {
   -webkit-text-fill-color: transparent!important;
 }
 
+h2 {
+  font-size: 2.25rem;
+}
+
 .title {
   font-size: 3.5rem;
   font-weight: 900;
