--- a/style.css
+++ b/style.css
@@ -28,10 +28,10 @@ body {
 }
 
 .gradient {
-  background: -webkit-linear-gradient(#8a05ff,#7e2cc7)!important;
-  background-clip: text!important;
-  -webkit-background-clip: text!important;
-  -webkit-text-fill-color: transparent!important;
+  background: -webkit-linear-gradient(#8a05ff,#7e2cc7);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 h2 {
