--- a/style.css
+++ b/style.css
@@ -41,7 +41,11 @@ h2 {
 .title {
   font-size: 3.5rem;
   font-weight: 800;
-  margin: none;
+  display: block;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
 
 .spesh {
